<resources>
    <string name="app_name">GithubUsers</string>
    <string name="user_name">Username</string>
    <string name="content_desc_profile_pic">User profile picture</string>
    <string name="searchbar_hint">Search user here</string>
    <string name="full_nama">Full name</string>
    <string name="followers">%s followers</string>
    <string name="following">%s following</string>
    <string name="nav_tab_desc">Navigation tab desc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">follower</string>
    <string name="tab_text_2">following</string>
    <string name="no_followers">Don\'t have any follower</string>
    <string name="no_following">Following no one</string>
    <string name="favorite_desc">Add to favorite</string>
    <string name="initial_query_username">arif</string>
    <string name="title_favorite_users">Favorite Users</string>
    <string name="title_favorite_users_btn">Favorite Users</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode </string>

</resources>